# VisForge

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: inspect_dataset.py  plot_openpmd_slice.py  plot_sample_plane.yaml  plot_silo_slice.py  plot_slice.yaml  plot_tsv_line.py
src/visforge/: __init__.py  cli.py  config.py
src/visforge/data/: __init__.py  backend.py  carpetx.py  detect.py  model.py  openpmd.py  plane.py  registry.py  silo.py  tsv.py
src/visforge/plotting/: __init__.py  base.py  line.py  output.py  scalar.py  style.py
src/visforge/workflows/: __init__.py  inspect.py  line_plot.py  slice_plot.py
tests/: conftest.py  test_backend_detection.py  test_carpetx_discovery.py  test_cli.py  test_inspect.py  test_openpmd_backend.py  test_openpmd_components.py  test_plane_sampling.py  test_plotting_line.py  test_plotting_scalar.py  test_style.py  test_tsv_backend.py  test_workflows.py
